--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -44,7 +44,9 @@
         <file alias="debugwindow">res/icons/debugwindow.png</file>
         <file alias="staking_off">res/icons/staking_off.png</file>
         <file alias="staking_on">res/icons/staking_on.png</file>
-    </qresource>
+		<file alias="block">res/icons/block.png</file>
+		<file alias="statistics">res/icons/stats.png</file>
+	</qresource>
     <qresource prefix="/images">
         <file alias="about">res/images/about.png</file>
         <file alias="splash">res/images/splash.png</file>
